tests/fixtures/invalid/list_floordiv_none.py
# Cannot floor divide List[int] and None
x: list[int] = [1, 2, 3] // None
